--- a/Long_Quiz_1.ipynb
+++ b/Long_Quiz_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtf+hFUZV5Q3VSxBGeR0yC",
+      "authorship_tag": "ABX9TyM59sXDVd9bslrBoczPg9gF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,13 +38,7 @@
     {
       "cell_type": "code",
       "source": [
-        "name = []\n",
-        "name.insert(0, \"Ian\")\n",
-        "name.insert(1, \"Vincent\")\n",
-        "name.insert(2, \"Litong\")\n",
-        "name.insert(3, \"Reyes\")\n",
-        "\n",
-        "print(name)\n",
+        "name = [\"I\",\"A\",\"N\",\"V\",\"I\",\"N\",\"C\",\"E\",\"N\",\"T\",\"R\",\"E\",\"Y\",\"E\",\"S\"]\n",
         "\n",
         "name.reverse()\n",
         "print(name)"
@@ -54,16 +48,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ij_gFY1eZI1v",
-        "outputId": "a1647642-b01e-406b-cefd-3236bc7b45df"
+        "outputId": "c58e405a-64f5-4765-bc91-5d94f3cfaf19"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Ian', 'Vincent', 'Litong', 'Reyes']\n",
-            "['Reyes', 'Litong', 'Vincent', 'Ian']\n"
+            "['S', 'E', 'Y', 'E', 'R', 'T', 'N', 'E', 'C', 'N', 'I', 'V', 'N', 'A', 'I']\n"
           ]
         }
       ]
